﻿Subtitle Edit Changelog


3.5.3 (xth May 2017) BETA
* NEW:
   * New ...
* IMPROVED:
   * Updated Chinese translation - thx Leon
   * Import plain text now also supports input as HTML
   * Added "Total words" to statistics - thx Barbara
   * Added more Tesseract dictionaries - thx lucybook/Elheym
* FIXED:
   * Fixed crash in "Add to user dictionary" in OCR - thx alfix0
   * Fixed original file name bug in "Undo" - thx darnn
   * Fixed non default timecode scales in MKV - thx mkver
   * Fix layout of translator mode in RTL mode - thx darnn
   * Fixed possible crash in "CleanAutoBackupFolder" - thx kaser2010
   * Fix missing UTF-8 tag in OCR HTML export - thx dgonyier
   * Fixed issue regarding "Fix dialogs on one line" - thx ingo
   * Fixed possible crash in EBU STL - thx Elena

3.5.2 (3rd March 2017)
* NEW:
   * Added optional list view columns "chars/sec" + "words/min"
   * New setting for waveform: Set video position when moving start/end
   * Added new json subtitle format - thx Zhiyi
   * Added new binary subtitle format - thx Suzanne
   * Added shortcut "Go to previous line and set video position" - thx Mia
* IMPROVED:
   * Updated Russian translation - thx Elheym
   * Updated Portuguese translation - thx moob
   * Updated Polish translation - thx admas
   * Updated Basque translation - thx Xabier
   * Updated Korean translation - thx domddol
   * Updated Hungarian translation - thx ZityiSoft Team
   * Updated Swedish translation - thx Ted
   * Updated Chinese translation - thx Leon
   * Minor improvements for format "Structured titles" - thx Yamato-ua
   * List view columns arrangable and non-clickable - thx Ingo
   * EBU STL: New settings regarding vertical position
   * EBU STL: New color picker dialog
   * "libmpv" shows version number
   * Added preview text inside video for "libmpv"
   * Added format "PAC" to "Batch convert" - thx Amed
* FIXED:
   * Fixed play current/selection not stopping - thx rhazor