@@ -1,9 +1,4 @@
-﻿using System;
-using System.Collections.Generic;
-using System.Linq;
-using System.Text;
-
-namespace Nikse.SubtitleEdit.Core.NetflixQualityCheck
+﻿namespace Nikse.SubtitleEdit.Core.NetflixQualityCheck
 {
     public interface INetflixQualityChecker
     {
